src/test/deca/lexique/invalid/AutoInclude.deca
// DESCRIPTION : faire un include du fichier lui-même
// RESULTAT: Circular include for file AutoInclude.deca
#include "AutoInclude.deca"
